# Smoothing_Essential

./: .gitignore  CMakeLists.txt  README.md  plot_example.py  utils.py
cmake/: Findpybind11.cmake
inc/: BooleanOps.hpp  STape.hpp  SType.hpp  ValueOps.hpp  custom_concepts.hpp  general_types.hpp  operators.hpp  type_helpers.hpp
py/: produce_plots.py
py/utils/: comparison_utils.py  plot_graphs.py  plotting_utils.py
pybound/: CMakeLists.txt  pybinder.cpp
pybound/funcs/: dijkstra_utilities.hpp  smooth_dijkstra.hpp
source/: CMakeLists.txt  dco_shorthands.h
source/cmake/: Finddco_cpp_v3.cmake  Finddco_cpp_v3_BYPULL.cmake  Findpybind11.cmake
source/overload_smooth/: CMakeLists.txt  branchTape.cpp  overload_math.hpp  overload_smooth.hpp  overload_smooth_I.hpp  param_call_utils.hpp  stype.cpp  styperesult.cpp
source/pybind_integrated/: CMakeLists.txt  pybinder.cpp  smoothing_examples.hpp
source/tf_integrated/: CMakeLists.txt
source/tf_integrated/functions/: cb2.cc  crescent.cc  ql.cc  remember_function.cc  set_global_smoothing_factor.cc  spiral.cc  step.cc  tf_integrated_funcs.h  tf_integrated_param_calls.h
src/: CMakeLists.txt
tfops/: test_tf.py  tf_crescent_visual.py  tf_crescent_visual_loweronly.py  tf_opt_cb2.py  tf_opt_crescent.py  tf_step2d_visual.py  utils.py
zplots/: plot_artefacts.py  plot_artefacts_bw.py
